# ComfyUI-Sa2VA-DP

./: .tracking  README.md  __init__.py  install.py  model_manager.py  pyproject.toml  requirements.txt  test_node.py  安装验证.bat  遮罩预处理功能说明.txt
.trae/rules/: project_rules.md
.windsurf/workflows/: rules.md
nodes/: __init__.py  sa2va_node.py
